--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
             sudo apt-get update
             sudo apt-get install \
+	      xorg-dev \
               doxygen 
 
       - name: Configure
