--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -42,4 +42,4 @@ jobs:
             -DCMAKE_BUILD_TYPE=${{ matrix.config }} 
 
       - name: Build
-        run: cd build; make doc-devkit-full; ccache --show-stats
+        run: cd build; make doc-devkit-full; 
