Trying to fix doxygen action

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -29,7 +29,7 @@ jobs:
             -DCMAKE_BUILD_TYPE=Release
 
       - name: Build
-        run: [
+        run: |
 	  cd build
 	  make doc-devkit-full
 	
