--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -2,29 +2,48 @@ name: Doxygen
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build:
-     runs-on: ubuntu-latest
-     
-     steps:
+  Unix:
+    name: ${{ matrix.name }} (${{ matrix.config }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-20.04]
+        config: [Release]
+        include:
+          - os: ubuntu-20.04
+            name: Linux
+    steps:
       - name: Checkout repository
         uses: actions/checkout@v1
         with:
           fetch-depth: 10
 
       - name: Dependencies
+        if: runner.os == 'Linux'
         run: |
             sudo apt-get update
             sudo apt-get install \
               xorg-dev  \
               doxygen
-
       - name: Configure
         run: |
           mkdir -p build
           cd build
           cmake .. \
-            -DCMAKE_BUILD_TYPE=Release
+            -DCMAKE_BUILD_TYPE=${{ matrix.config }} 
+      - name: Build
+        run: cd build; make doc-devkit-full; 
 
+      - name: Deploy
+         uses: peaceiris/actions-gh-pages@v3
+         with:
+           github_token: ${{ secrets.GITHUB_TOKEN }}
+           publish_dir: ./html
