--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -46,4 +46,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./html
+          publish_dir: ./build/Linux64-gcc-Release/doc/devkit-full/html
