--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -40,10 +40,7 @@ jobs:
           cmake .. \
             -DCMAKE_BUILD_TYPE=${{ matrix.config }} 
       - name: Build
-        run: |
-	  echo "======== Build"; pwd; ls;
-	  cd build
-	  make doc-devkit-full; 
+        run: echo "======== Build"; pwd; ls; cd build; make doc-devkit-full; 
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
