--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -1,12 +1,7 @@
 name: Doxygen
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch
 
 jobs:
   Unix:
@@ -39,7 +34,7 @@ jobs:
           cmake .. \
             -DCMAKE_BUILD_TYPE=${{ matrix.config }} 
       - name: Build
-        run: cd build; make doc-devkit-full; find .
+        run: cd build; make doc-devkit-full
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
