New options for scoop.

--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -116,7 +116,7 @@ jobs:
       - name: Prepare sccache
         run: |
           Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
-          scoop install sccache --global
+          scoop install sccache --global -RunAsAdmin
           # Scoop modifies the PATH so we make it available for the next steps of the job
           echo "${env:PATH}" >> ${env:GITHUB_PATH}
 
