* Replaced gui state with unsigned chars instead of chars   (to fix warnings under Windows)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@
 # - it is the first version that fully supports the specification of Visual
 # Studio toolsets (v110_xp).
 # - it is the version that supports the command string(TIMESTAMP ...)
-cmake_minimum_required(VERSION 2.8.11)
+# ... set to 2.8.12 (< 2.8.12 has been deprecated)
+cmake_minimum_required(VERSION 2.8.12)
 
 # Note: geogram.cmake defines GEOGRAM_WITH_VORPALINE
 # that we could have used instead,
