--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -41,4 +41,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./Releases
-          destination_dir: Releases/sources
+          destination_dir: Releases
