--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -98,9 +98,9 @@ jobs:
             os: macOS-11
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
         with:
-          fetch-depth: 10
+          submodules: recursive
 
       - name: Dependencies (Linux)
         if: runner.os == 'Linux'
@@ -151,9 +151,9 @@ jobs:
         config: [Debug, Release]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
         with:
-          fetch-depth: 10
+          submodules: recursive
 
       - name: Enable Developer Command Prompt
         uses: ilammy/msvc-dev-cmd@v1
