Set current version: 1.8.2-rc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,10 +48,16 @@ endif()
 
 include(cmake/geogram.cmake)
 
+set(VORPALINE_VERSION_RC TRUE)
 set(VORPALINE_VERSION_MAJOR 1)
 set(VORPALINE_VERSION_MINOR 8)
-set(VORPALINE_VERSION_PATCH 1)
-set(VORPALINE_VERSION ${VORPALINE_VERSION_MAJOR}.${VORPALINE_VERSION_MINOR}.${VORPALINE_VERSION_PATCH})
+set(VORPALINE_VERSION_PATCH 2)
+
+if(VORPALINE_VERSION_RC)
+   set(VORPALINE_VERSION ${VORPALINE_VERSION_MAJOR}.${VORPALINE_VERSION_MINOR}.${VORPALINE_VERSION_PATCH}-rc)
+else()
+   set(VORPALINE_VERSION ${VORPALINE_VERSION_MAJOR}.${VORPALINE_VERSION_MINOR}.${VORPALINE_VERSION_PATCH})
+endif()
 
 set(VORPALINE_INCLUDE_SUBPATH geogram${VORPALINE_VERSION_MAJOR})
 
