--- a/tools/testenv.bat.in
+++ b/tools/testenv.bat.in
@@ -9,6 +9,8 @@ set VORPALINE_SOURCE_DIR=@CMAKE_SOURCE_DIR.PATH@
 set VORPALINE_BUILD_DIR=@CMAKE_BINARY_DIR.PATH@
 set VORPALINE_BIN_DIR=@CMAKE_RUNTIME_OUTPUT_DIRECTORY.PATH@
 set VORPALINE_LIB_DIR=@CMAKE_LIBRARY_OUTPUT_DIRECTORY.PATH@
+set VORPATEST_ROOT_DIR=@CMAKE_SOURCE_DIR.PATH@/tests
+set DATADIR=@CMAKE_SOURCE_DIR.PATH@/tests/data
 
 :: Parse arguments
 :: If the build directory contains a Makefile, we are in a single build
