--- a/tools/testenv.sh.in
+++ b/tools/testenv.sh.in
@@ -11,6 +11,8 @@ export VORPALINE_SOURCE_DIR="@CMAKE_SOURCE_DIR.PATH@"
 export VORPALINE_BUILD_DIR="@CMAKE_BINARY_DIR.PATH@"
 export VORPALINE_BIN_DIR="@CMAKE_RUNTIME_OUTPUT_DIRECTORY.PATH@"
 export VORPALINE_LIB_DIR="@CMAKE_LIBRARY_OUTPUT_DIRECTORY.PATH@"
+export VORPATEST_ROOT_DIR="@CMAKE_SOURCE_DIR.PATH@/tests"
+export DATADIR="@CMAKE_SOURCE_DIR.PATH@/tests/data"
 
 args=
 while [ -n "$1" ]; do
