--- a/.github/workflows/smoke_tests.yml
+++ b/.github/workflows/smoke_tests.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: BrunoLevy/geogram.data
-          path: data
+          path: geogram/data
 
       - name: Dependencies (Linux)
         if: runner.os == 'Linux'
@@ -76,7 +76,17 @@ jobs:
         run: cd build; make -j2; ccache --show-stats
 
       - name: Tests
-        run: cd build; ctest --verbose -j2
+        run: |
+          build/runpybot.sh --include=smoke tests/
+
+      - name: Publish tests results
+        uses: actions/upload-artifact@v3
+        with:
+          name: Tests results
+          path: |
+            report.html
+            log.html
+
 
   ####################
   # Windows
@@ -102,7 +112,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: BrunoLevy/geogram.data
-          path: data
+          path: geogram/data
 
       - name: Enable Developer Command Prompt
         uses: ilammy/msvc-dev-cmd@v1
