build/runpybot.sh -> build/tests/runpybot.sh

--- a/.github/workflows/smoke_tests.yml
+++ b/.github/workflows/smoke_tests.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Tests
         run: |
-          build/runpybot.sh --include=smoke tests/
+          build/tests/runpybot.sh --include=smoke tests/
 
       - name: Publish tests results
         uses: actions/upload-artifact@v3
