WIP: trying to figure out why tests do not find data

--- a/.github/workflows/smoke_tests.yml
+++ b/.github/workflows/smoke_tests.yml
@@ -78,6 +78,7 @@ jobs:
       - name: Tests
         run: |
           ls -al
+	  find . -type d
           build/tests/runpybot.sh --include=smoke tests/
 
       - name: Publish tests results
