--- a/.github/workflows/smoke_tests.yml
+++ b/.github/workflows/smoke_tests.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: BrunoLevy/geogram.data
-          path: geogram/tests/data
+          path: tests/data
 
       - name: Dependencies (Linux)
         if: runner.os == 'Linux'
@@ -114,7 +114,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: BrunoLevy/geogram.data
-          path: geogram/tests/data
+          path: tests/data
 
       - name: Enable Developer Command Prompt
         uses: ilammy/msvc-dev-cmd@v1
