Added robotframework installation for MacOS

--- a/.github/workflows/smoke_tests.yml
+++ b/.github/workflows/smoke_tests.yml
@@ -51,6 +51,7 @@ jobs:
         run: |
           brew update
           brew install ccache
+          pip install robotframework
 
       - name: Cache Build
         id: cache-build
