Display all generated files under Windows.

--- a/.github/workflows/smoke_tests.yml
+++ b/.github/workflows/smoke_tests.yml
@@ -168,6 +168,7 @@ jobs:
 
       - name: Tests
         run: |
+          dir /s /b /o:gn
           build/tests/runpybot.bat --config=${{ matrix.config }} --include=smoke tests/
 
       - name: Publish tests results
