--- a/.github/workflows/smoke_tests.yml
+++ b/.github/workflows/smoke_tests.yml
@@ -168,7 +168,7 @@ jobs:
 
       - name: Tests
         run: |
-          dir /s /b /o:gn
+          dir /s /b
           build/tests/runpybot.bat --config=${{ matrix.config }} --include=smoke tests/
 
       - name: Publish tests results
