Trying to see file structure under windows (dir /s did not work, trying tree)

--- a/.github/workflows/smoke_tests.yml
+++ b/.github/workflows/smoke_tests.yml
@@ -168,7 +168,7 @@ jobs:
 
       - name: Tests
         run: |
-          dir . /s /b
+          tree /f
           build/tests/runpybot.bat --config=${{ matrix.config }} --include=smoke tests/
 
       - name: Publish tests results
