--- a/.github/workflows/smoke_tests.yml
+++ b/.github/workflows/smoke_tests.yml
@@ -168,13 +168,13 @@ jobs:
 
       - name: Tests
         run: |
-          tree /f
+          cd
           build/tests/runpybot.bat --config=${{ matrix.config }} --include=smoke tests/
 
       - name: Publish tests results
         uses: actions/upload-artifact@v3
         with:
-          name: TestsResults-${{matrix.name}}-${{matrix.config}}
+          name: TestsResults-Windows-${{matrix.config}}
           path: |
             report.html
             log.html
