--- a/tools/testenv.bat.in
+++ b/tools/testenv.bat.in
@@ -11,7 +11,7 @@ set VORPALINE_BIN_DIR=@CMAKE_RUNTIME_OUTPUT_DIRECTORY.PATH@
 set VORPALINE_LIB_DIR=@CMAKE_LIBRARY_OUTPUT_DIRECTORY.PATH@
 set VORPATEST_ROOT_DIR=@CMAKE_SOURCE_DIR.PATH@/tests
 set DATADIR=@CMAKE_SOURCE_DIR.PATH@/tests/data
-set PATH=%PATH%;%VORPALINE_BIN_DIR%
+:: set PATH=%PATH%;%VORPALINE_BIN_DIR%
 
 :: Parse arguments
 :: If the build directory contains a Makefile, we are in a single build
