robot wrapper now creates TEST_FAILED file if the tests failed.

--- a/.github/workflows/smoke_tests.yml
+++ b/.github/workflows/smoke_tests.yml
@@ -64,6 +64,7 @@ jobs:
         if: runner.os != 'Windows'
         run: |
           build/${{ env.platform }}/tests/runpybot.sh --include=smoke tests/
+          ls
 
 ################### Windows ##################################################
 
@@ -80,6 +81,7 @@ jobs:
         run: |
           build/Windows/tests/runpybot.bat `
           --config=${{ matrix.config }} --include=smoke tests/
+          dir
 
 ##############################################################################
 
