--- a/tools/runpybot.sh.in
+++ b/tools/runpybot.sh.in
@@ -3,7 +3,9 @@
 
 scriptdir=`dirname "$0"`
 . "$scriptdir/testenv.sh" || exit 1
-robot $args
+if ! robot $args ; then
+    > TESTS_FAILED
+fi    
 
 # Some Jenkins plugins (like the Jenkins Performance Plugin) do not take
 # testcase fullnames into account. Testnames with identical names but from
