- Tests create TEST_SUCCESS on success - SmokeTest action tests the presence of TEST_SUCCESS at the end

--- a/.github/workflows/smoke_tests.yml
+++ b/.github/workflows/smoke_tests.yml
@@ -93,3 +93,8 @@ jobs:
             report.html
             log.html
 
+      - name: "Notify tests results"
+        uses: andstor/file-existence-action@v2
+        with:
+          files: "TESTS_SUCCESS"
+	  fail: true
