--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ endif()
 
 include(cmake/geogram.cmake)
 
-set(VORPALINE_VERSION_RC TRUE)
+set(VORPALINE_VERSION_RC FALSE)
 set(VORPALINE_VERSION_MAJOR 1)
 set(VORPALINE_VERSION_MINOR 8)
 set(VORPALINE_VERSION_PATCH 2)
