--- a/.github/workflows/make_release.yml
+++ b/.github/workflows/make_release.yml
@@ -23,7 +23,7 @@ jobs:
             rpm \
       - 
         name: "Generate release"
-        run: "tools/make_geogram_dist.sh -no-doc -no-tar-zip\n"
+        run: "tools/make_geogram_dist.sh -no-doc\n"
       - 
         name: "Copy release files"
         run: |
